src/test/ui/feature-gates/feature-gate-doc_keyword.stderr
error[E0658]: `#[doc(keyword)]` is experimental
  --> $DIR/feature-gate-doc_keyword.rs:1:1
   |
LL | #[doc(keyword = "match")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51315 <https://github.com/dust-lang/dust/issues/51315> for more information
   = help: add `#![feature(doc_keyword)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
